--- a/source/scss/components/_header.scss
+++ b/source/scss/components/_header.scss
@@ -15,13 +15,30 @@
         width: 75px;
         height: 75px;
         border: 0.5px solid #E6E6E6;
-        
         background: #FFFFFF;
     }
 
-    &--ellipse {
-        background: url(/source/img/bar_icons/ellipse.svg) no-repeat center;
+    &__ellipse {
+        display: flex;
+        justify-content: space-around;
+        width: 38px;
+        height: 18px;
+        align-items: center;
+        margin: auto;
+        margin-top: 22px;
+        
+        border-radius: 50px;
+        background: linear-gradient(to left, #FA745A 0%, #FD5272 100%);
     }
+
+    &__header-circle-color {
+        background: #FFFFFF;
+    }
+
+    // &--ellipse {
+    //     // background: url(/source/img/bar_icons/ellipse.svg) no-repeat center;
+    //     // background-color: yellow;
+    // }
 
     &--folder {
        background: url(/source/img/bar_icons/folder.svg) no-repeat center;
@@ -64,7 +81,7 @@
         height: 25px;
         font-size: 13px;
         color: #ECECEC;
-        border-radius: 56px 0 0 50px;
+        border-radius: 50px 0 0 50px;
         border: 1px solid;
         border-right: none;
         background: #F8F8F8;
@@ -79,6 +96,8 @@
         border-radius: 0 50px 50px 0;
         border: 1px solid;
         border-left: none;
+        color: #ECECEC;
+        background: #F8F8F8;
     }
 
     &__names {
@@ -175,5 +194,11 @@
     &__title-color {
         color: #FD5372;
         margin-top: 20px;
+    }
+
+    &__settings-margin {
+        // display: flex;
+        margin-top: 20px;
+        padding-left: 53px;
     }
 }
