--- a/source/scss/components/_main.scss
+++ b/source/scss/components/_main.scss
@@ -280,6 +280,7 @@
         height: 230px;
         padding: 25px;
         background: #ffffff;
+        overflow-y: scroll;
     }
 
     &__inner-blocks {
@@ -322,14 +323,14 @@
         @include function;
         color: #BFBFBF;
         font-weight: bold;
-        margin-left: 30px;
+        margin-left: 15px;
     }
 
     &__inner-blocks-clock {
         width: 12px;
         height: 12px;
         background: url(/source/img/bar_icons/clock.svg) no-repeat center;
-        margin-left: 73px;
+        margin-left: 60px;
     }
 
     &__inner-blocks-time {
