--- a/source/style/main.css
+++ b/source/style/main.css
@@ -527,6 +527,12 @@ textarea {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: 335px;
   height: 35px;
 }
@@ -551,7 +557,7 @@ textarea {
   border: 1px solid;
   border-left: none;
   color: #ECECEC;
-  background: #F8F8F8;
+  background-color: #F8F8F8;
 }
 
 .header__names {
@@ -788,6 +794,55 @@ textarea {
   color: #C4C4C4;
   border-radius: 50px;
   background: #C4C4C4;
+}
+
+.main__graphics {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  width: 680px;
+  height: 180px;
+  margin-top: 15px;
+}
+
+.main__graphics-axis-y {
+  width: 30px;
+  height: 120px;
+}
+
+.main__axis-y {
+  height: 40px;
+  font-family: 'Lato', sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  color: #C4C4C4;
+}
+
+.main__graphics-axis-x {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 690px;
+  height: 20px;
+}
+
+.main__axis-x {
+  width: 55px;
+  padding-left: 50px;
+  font-family: 'Lato', sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  color: #C4C4C4;
+}
+
+.main__graphics-graphics {
+  width: 650px;
+  height: 120px;
+  padding-left: 20px;
 }
 
 .main__card {
