--- a/source/scss/components/_header.scss
+++ b/source/scss/components/_header.scss
@@ -18,22 +18,28 @@
         background: #FFFFFF;
     }
 
+    &__tabs-padding {
+        padding-top: 22px;
+    }
+
     &__ellipse {
         display: flex;
         justify-content: space-around;
         width: 38px;
         height: 18px;
+        margin-top: 22px;
+        // padding-top: 22px;
         align-items: center;
         margin: auto;
-        margin-top: 22px;
+        border: none;
         
         border-radius: 50px;
         background: linear-gradient(to left, #FA745A 0%, #FD5272 100%);
     }
 
-    &__header-circle-color {
-        background: #FFFFFF;
-    }
+    // &__header-circle-color {
+    //     background: #FFFFFF;
+    // }
 
     // &--ellipse {
     //     // background: url(/source/img/bar_icons/ellipse.svg) no-repeat center;
@@ -79,8 +85,10 @@
     }
 
     &__search {
+        @include function;
         width: 200px;
         height: 25px;
+        padding-left: 20px;
         font-size: 13px;
         color: #ECECEC;
         border-radius: 50px 0 0 50px;
