--- a/source/scss/components/_main.scss
+++ b/source/scss/components/_main.scss
@@ -14,7 +14,7 @@
         // display: flex;
         // justify-content: space-between;
         width: 730px;
-        height: 240px;
+        // height: 240px;
         margin: 15px;
         padding: 25px;
         background: #ffffff;
@@ -336,7 +336,7 @@
     }
 
     &__todo {
-        width: 530px;
+        max-width: 530px;
         height: 230px;
         padding: 25px;
         background: #ffffff;
