--- a/source/scss/components/_main.scss
+++ b/source/scss/components/_main.scss
@@ -192,7 +192,8 @@
 
     &__span-text {
         display: flex;
-        width: 50px;
+        justify-content: space-between;
+        width: 80px;
         height: 20px;
         margin-top: 8px;
         margin-left: 80px;
@@ -205,28 +206,35 @@
     }
 
     &__span-high {
+        position: relative;
         @include nav-text;
         font-size: 12px;
         color: #BFBFBF;
     }
 
     &__span-high::before {
+        position: absolute;
         content: ''; 
-        left: 20px; bottom: -20px; /* Положение треугольника */
-        border: 6px solid transparent; /* Прозрачные границы */
+        left: -10px; 
+        bottom: 10px; /* Положение треугольника */
+        border: 4px solid transparent; /* Прозрачные границы */
         border-bottom: 6px solid #A889E9; /* Добавляем треугольник */
     }
 
     &__span-low {
+        position: relative;
         @include nav-text;
         font-size: 12px;
         color: #BFBFBF;
     }
 
     &__span-low::before {
+        position: absolute;
         content: ''; 
-        left: 20px; bottom: -20px; /* Положение треугольника */
-        border: 6px solid transparent; /* Прозрачные границы */
+        // bottom: 7px;
+        left: -10px; 
+        bottom: 8px; /* Положение треугольника */
+        border: 4px solid transparent; /* Прозрачные границы */
         border-top: 6px solid #FD5670; /* Добавляем треугольник */
     }
 
@@ -242,7 +250,7 @@
         flex-direction: column;
         justify-content: space-between;
         height: 485px;
-        width: 450px;
+        // width: 450px;
         margin-left: 15px;
         margin-right: 15px;
         margin-bottom: 15px;
@@ -253,14 +261,14 @@
     &__footer-bloks {
         display: flex;
         justify-content: space-between;
-        width: 400px;
-        height: 80px;
+        // width: 400px;
+        // height: 80px;
     }
     
 
     &__footer-card {
-        width: 45px;
-        height: 80px;
+        // width: 45px;
+        // height: 80px;
         text-align: center;
     }
 
@@ -275,7 +283,7 @@
     &__footer-span {
         @include function;
         width: 330px;
-        height: 80px;
+        // height: 80px;
         padding: 10px;
         border: 0.5px solid #E6E6E6;
         background: #ffffff;
@@ -410,41 +418,3 @@
 
 
 
-
-
-
-//     // costomers feed
-//     &__aside {
-//         width: 460px;
-//         height: 500px;
-//     }
-
-//     // revenue progress shipments
-//     &__footer {
-//         width: 260px;
-//         height: 260px;
-//     }
-
-//     // toodays progrees shipments
-//     &__inner {
-//         display: flex;
-//         flex-wrap: wrap;
-//         width: 273px;
-//         height: 830px;
-
-//     }
-// }
-
-
-
-// .header
-
-// .main__todo {
-//     width: 500px;
-//     height: 245px;
-// }
-
-// .main__footer {
-//     width: 260px;
-//     height: 260px;
-// }
