--- a/source/scss/components/_aside.scss
+++ b/source/scss/components/_aside.scss
@@ -14,14 +14,24 @@
     }
 
     &__blocks {
+        position: relative;
         width: 90px;
         height: 48px;
+        cursor: pointer;
     }
 
-    &__blocks:hover {
-        background: #C53E5B;
+
+    &__blocks:hover::after {
+        position: absolute;
+        content: '';
+        top: 48px;
+        left: calc(50% - 10px);
+        border: 10px solid transparent;
+        border-top: 6px solid #FD5670;
+        
     }
 
+  
     &--people {
         background: url(/source/img/bar_icons/people.svg) no-repeat center;
     }
