--- a/source/scss/components/_header.scss
+++ b/source/scss/components/_header.scss
@@ -115,19 +115,24 @@
         @include names;
         width: 130px;
         height: 20px;
-        color: #FD4E75;
+        color: #777777;
+    }
+
+    &__names-color {
+        color: #FD576F;
     }
 
     &__function {
         @include function;
-        width: 110px;
-        height: 20px;
+        // width: 110px;
+        // height: 20px;
         color: #BFBFBF;
     }
 
     &--size {
-        display: flex;
-        flex-direction: column;
+        // display: flex;
+        // flex-direction: column;
+        // justify-content: space-around;
         width: 120px;
         height: 75px;
         padding-left: 20px;
