--- a/source/scss/config/_media.scss
+++ b/source/scss/config/_media.scss
@@ -1,21 +1,46 @@
 @media (max-width: 820px) {
     .nav {
-        // display: none;
         width: 30px;
         height: 30px;
+    }
+
+    .nav__logotype {
+        // top: 20px;
+        position: fixed;
+        // top: 20px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        // margin-top: 20px;
+        width: 30px;
+        height: 35px;
+        // font-size: 15px;
+        border-radius: 5px;
+        background-color: #ffffff;
     }
 
     .nav__logo {
-        // display: block;
-        position: fixed;
+        // top: 20px;
         padding-top: 0px;
-        // margin: auto;
         width: 30px;
-        height: 30px;
-        font-size: 20px;
-        // display: none;
+        height: 20px;
+        font-size: 15px;
     }
 
+    // hamburger
+    .nav__hamburger {
+        display: flex;
+    }
+
+    .nav__hamburger-line {
+        width: 12px;
+        height: 1px;
+        color: #C4C4C4;
+        background: #C4C4C4;
+    }
+
+ 
     .nav__items {
         display: none;
     }
@@ -75,7 +100,10 @@
     }
 
     .header--size {
-        display: none;
+        width: auto;
+        height: 50px;
+        padding: 0px;
+        text-align: center;
     }
 
     .header__footer {
@@ -119,6 +147,10 @@
 
     .main__inner-blocks {
         height: auto;
+    }
+
+    .main__inner-blocks-clock {
+        display: none;
     }
 
     .main__footer {
